--- a/ommig.html
+++ b/ommig.html
@@ -32,9 +32,9 @@
           <p class="p_topmargin">Jeg er 26 vintre gammel og er bosat på Vesterbro, hvor jeg driver min egen lille hobby-virksomhed og studerer til multimediedesigner på KEA.</p>
           <p class="p_top_buttom_margin">Jeg er drevet af det visuelle og nyder at udfolde mig kreativt. Endvidere er jeg socialt anlagt og bestræber mig på at møde mine medmennesker med aktiv lytning, anerkendelse, nysgerrighed og åbenhed.</p>
         </div>
-        <div class="img_place1">
-          <img class="img_place" src="img/portfolio_portaet.jpg" alt="Billede af mig" />
-        </div>
+        <figure class="img_place1">
+          <img class="img_place" src="img/portraet.jpg" alt="Billede af mig" />
+        </figure>
       </section>
       <article class="grid_col2_ommig_desk">
         <div>
