--- a/index.html
+++ b/index.html
@@ -23,5 +23,26 @@
         </ul>
       </nav>
     </header>
+    <main>
+      <div class="splash">
+        <img src="img/logo_splah2.png" alt="logo" />
+      </div>
+      <section class="knap_grid">
+        <div>
+          <a class="knap_forside" href="projekter.html">02</a>
+          <a class="knap_forside" href="projekter.html">03</a>
+          <a class="knap_forside" href="projekter.html">04</a>
+          <a class="knap_forside" href="projekter.html">05</a>
+          <a class="knap_forside" href="projekter.html">06</a>
+        </div>
+      </section>
+    </main>
+    <footer>
+      <div class="footer">
+        <p>© Sarah Hvid Pedersen</p>
+      </div>
+    </footer>
+
+    <script src="script.js"></script>
   </body>
 </html>
