--- a/ommig.html
+++ b/ommig.html
@@ -85,11 +85,13 @@
         <p>+45 21167283</p>
         <p>Sara199a@stud.kea.dk</p>
       </section>
-      <footer>
-        <div class="footer">
-          <p>© Sarah Hvid</p>
-        </div>
-      </footer>
     </main>
+    <footer>
+      <div class="footer">
+        <p>© Sarah Hvid Pedersen</p>
+      </div>
+    </footer>
+
+    <script src="script.js"></script>
   </body>
 </html>
