--- a/index.html
+++ b/index.html
@@ -13,16 +13,19 @@
     <title>Forside</title>
   </head>
   <body>
-    <header>
-      <a href="index.html"> <h1 class="logo">S.</h1> </a>
-
-      <nav>
+    <header class="banner">
+      <div>
+        <a class="logo" href="index.html">SH</a>
+      </div>
+      <nav class="main-menu">
+        <button class="toggle-btn">MENU</button>
         <ul>
-          <li><a href="projekter.html">PROJEKTER</a></li>
-          <li><a href="ommig.html">OM MIG</a></li>
+          <li class="toggle_projekter"><a href="projekter.html">PROJEKTER</a></li>
+          <li class="toggle_ommig"><a href="ommig.html">OM MIG</a></li>
         </ul>
       </nav>
     </header>
+
     <main>
       <div class="splash">
         <img src="img/logo_splah2.png" alt="logo" />
@@ -38,9 +41,7 @@
       </section>
     </main>
     <footer>
-      <div class="footer">
-        <p>© Sarah Hvid Pedersen</p>
-      </div>
+      <p>© Sarah Hvid Pedersen</p>
     </footer>
 
     <script src="script.js"></script>
