--- a/ommig.html
+++ b/ommig.html
@@ -12,13 +12,15 @@
     <title>Om mig</title>
   </head>
   <body>
-    <header>
-      <a href="index.html"> <h1 class="logo">S.</h1> </a>
-
-      <nav>
+    <header class="banner">
+      <div>
+        <a class="logo" href="index.html">SH</a>
+      </div>
+      <nav class="main-menu">
+        <button class="toggle-btn">MENU</button>
         <ul>
-          <li><a href="projekter.html">PROJEKTER</a></li>
-          <li><a href="ommig.html">OM MIG</a></li>
+          <li class="toggle_projekter"><a href="projekter.html">PROJEKTER</a></li>
+          <li class="toggle_ommig"><a href="ommig.html">OM MIG</a></li>
         </ul>
       </nav>
     </header>
