--- a/projekter.html
+++ b/projekter.html
@@ -24,6 +24,65 @@
         </ul>
       </nav>
     </header>
+    <main>
+      <section>
+        <div>
+          <h1 class="h1_projekter">PROJEKTER</h1>
+        </div>
+        <div class="grid">
+          <div class="img_wrapper">
+            <img src="img/04_animation.png" alt="billede" />
+            <div class="content fade">
+              <a href="tema2.html">
+                <h2 class="hover_h2">02</h2>
+                <p>// GRUNDLÆGGENDE WEB</p>
+              </a>
+            </div>
+          </div>
+
+          <div class="img_wrapper">
+            <img src="img/04_animation.png" alt="billede" />
+            <div class="content fade">
+              <a href="tema3.html">
+                <h2 class="hover_h2">// 03</h2>
+                <p>GRUNDLÆGGENDE UX</p>
+              </a>
+            </div>
+          </div>
+
+          <div class="img_wrapper">
+            <img src="img/04_animation.png" alt="billede" />
+
+            <div class="content fade">
+              <a href="tema4.html">
+                <h2 class="hover_h2">// 04</h2>
+                <p>GRUNDLÆGGENDE ANIMATION</p>
+              </a>
+            </div>
+          </div>
+
+          <div class="img_wrapper">
+            <img src="img/04_animation.png" alt="billede" />
+            <div class="content fade">
+              <a href="tema5.html">
+                <h2 class="hover_h2">// 05</h2>
+                <p>GRUNDLÆGGENDE INDHOLD</p>
+              </a>
+            </div>
+          </div>
+
+          <div class="img_wrapper">
+            <img src="img/04_animation.png" alt="billede" />
+            <div class="content fade">
+              <a href="tema6.html">
+                <h2 class="hover_h2">// 06</h2>
+                <p>INDHOLD</p>
+              </a>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
 
     <script src="script.js"></script>
   </body>
