--- a/tema2.html
+++ b/tema2.html
@@ -9,8 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display+SC:ital,wght@0,400;0,700;0,900;1,400;1,700;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet" />
-
-    <title>Forside</title>
+    <title>02_Grundlæggende Web</title>
   </head>
   <body>
     <header class="banner">
@@ -27,19 +26,21 @@
     </header>
 
     <main>
-      <div class="splash">
-        <img src="img/logo_splah2.png" alt="logo" />
-      </div>
-      <section class="knap_grid">
+      <section class="tema2_1section_2col">
+        <div class="tema_overskrift">
+          <h1 class="tema_stort_tal">02</h1>
+          <h3>GRUNDLÆGGENDE WEB</h3>
+        </div>
         <div>
-          <a class="knap_forside" href="tema2.html">02</a>
-          <a class="knap_forside" href="tema3.html">03</a>
-          <a class="knap_forside" href="tema4.html">04</a>
-          <a class="knap_forside" href="tema5.html">05</a>
-          <a class="knap_forside" href="tema6.html">06</a>
+          <p class="temabeskrivelse">
+            I tema “02 Grundlæggende web fik vi den grundlæggendeviden, som vi som kommende multimediedesignere skal anvende, når vi kommer ud i erhvervslivet. <br />
+            blev blandt andet introduceret til layout, gestaltlove, konventioner, og brugervenlighed, som ligeledes er benyttet i denne portfolio. <br />
+            Derudover blev vi introduceret for HTML og CSS samt et udleveret wireframe, som vi skulle kode vores website ud fra i en tildelt stilart.
+          </p>
         </div>
       </section>
     </main>
+
     <footer>
       <p>© Sarah Hvid Pedersen</p>
     </footer>
