--- a/tema6.html
+++ b/tema6.html
@@ -9,8 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display+SC:ital,wght@0,400;0,700;0,900;1,400;1,700;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet" />
-
-    <title>Forside</title>
+    <title>06_Portfolio</title>
   </head>
   <body>
     <header class="banner">
@@ -26,20 +25,6 @@
       </nav>
     </header>
 
-    <main>
-      <div class="splash">
-        <img src="img/logo_splah2.png" alt="logo" />
-      </div>
-      <section class="knap_grid">
-        <div>
-          <a class="knap_forside" href="tema2.html">02</a>
-          <a class="knap_forside" href="tema3.html">03</a>
-          <a class="knap_forside" href="tema4.html">04</a>
-          <a class="knap_forside" href="tema5.html">05</a>
-          <a class="knap_forside" href="tema6.html">06</a>
-        </div>
-      </section>
-    </main>
     <footer>
       <p>© Sarah Hvid Pedersen</p>
     </footer>
