--- a/ommig.html
+++ b/ommig.html
@@ -27,7 +27,7 @@
 
     <main>
       <section class="grid_2col_sec1">
-        <div class="tekst_ommig">
+        <div>
           <h1 class="h1_topmargin">OM MIG</h1>
           <p>Sarah Hvid Pedersen</p>
           <h2 class="citat">“Nysgerrig, idérig og videbegærlig med en naturlig skabertrang”</h2>
