--- a/tema2.html
+++ b/tema2.html
@@ -26,17 +26,15 @@
     </header>
 
     <main>
-      <section class="tema2_1section_2col">
+      <section class="tema_1section_2col">
         <div class="tema_overskrift">
           <h1 class="tema_stort_tal">02</h1>
           <h3>GRUNDLÆGGENDE WEB</h3>
         </div>
         <div>
-          <p class="temabeskrivelse">
-            I tema “02 Grundlæggende web fik vi den grundlæggendeviden, som vi som kommende multimediedesignere skal anvende, når vi kommer ud i erhvervslivet. <br />
-            blev blandt andet introduceret til layout, gestaltlove, konventioner, og brugervenlighed, som ligeledes er benyttet i denne portfolio. <br />
-            Derudover blev vi introduceret for HTML og CSS samt et udleveret wireframe, som vi skulle kode vores website ud fra i en tildelt stilart.
-          </p>
+          <p class="temabeskrivelse">I tema “02 - Grundlæggende web” fik jeg en grundlæggende viden om anvendelse af diverse redskaber, som jeg, som kommende multimediedesigner, kan anvende, når jeg senere kommer ud i erhvervslivet.</p>
+          <p>På dette tema har jeg blandt andet lært om grundlæggende principper inden for design og programmering, herunder Photoshop, Adobe XD, styletile, wireframes, layoutdiagram, princippet om mobile first, HTML, CSS, validering, responsivitet, indholdsproduktion samt forskellige stilarter inden for webdesign.</p>
+          <p>Disse redskaber har ligeledes dannet grundlag for de resterende opgaver, jeg har lavet på dette semester samt dette portfolio.</p>
         </div>
       </section>
     </main>
