--- a/tema3.html
+++ b/tema3.html
@@ -25,6 +25,19 @@
       </nav>
     </header>
 
+    <main>
+      <section class="tema_1section_2col">
+        <div class="tema_overskrift">
+          <h1 class="tema_stort_tal">03</h1>
+          <h3>GRUNDLÆGGENDE UX</h3>
+        </div>
+        <div>
+          <p class="temabeskrivelse">I tema ”03 – Grundlæggende UX” tilegnede jeg mig en grundlæggende viden samt forståelse for UX, User Experience, som gav mig en dybere indsigt i samspillet mellem brugere og digitale brugergrænseflader. I forlængelse heraf blev jeg ydermere introduceret til forskellige researchmetoder, herunder tænke-højt-test, kvalitative og kvantitative metoder.</p>
+          <p>Derudover fik jeg i dette tema viden om konventioner, gestaltlove samt copy og micro copy som ligeledes er en stor del inden for UX.</p>
+        </div>
+      </section>
+    </main>
+
     <footer>
       <p>© Sarah Hvid Pedersen</p>
     </footer>
