--- a/tema4.html
+++ b/tema4.html
@@ -25,6 +25,20 @@
       </nav>
     </header>
 
+    <main>
+      <section class="tema_1section_2col">
+        <div class="tema_overskrift">
+          <h1 class="tema_stort_tal">04</h1>
+          <h3>GRUNDLÆGGENDE ANIMATIOn</h3>
+        </div>
+        <div>
+          <p class="temabeskrivelse">I tema ”04 – Grundlæggende animation” blev jeg introduceret for programmeringssproget javascript, som anvendes til at skabe avancerede og dynamiske websites. Udover det nye programmeringssprog, lærte jeg også, hvordan jeg i samspil med javascript og css animationer kunne skabe mit eget spil.</p>
+          <p>I dette tema fik jeg tilmed mulighed for at dygtiggøre mig i Adobe Illustrator, Audition og fik teoretisk indsigt i baggrundsdesign, UI-elementer, kompositionsteknikker og figurelementer.</p>
+          <p>Desforuden lærte jeg at arbejde med aktivitets- og statemachinediagrammer, som anvendes med henblik på planlægge komplicerede og interaktive flows.</p>
+        </div>
+      </section>
+    </main>
+
     <footer>
       <p>© Sarah Hvid Pedersen</p>
     </footer>
