--- a/tema5.html
+++ b/tema5.html
@@ -25,6 +25,20 @@
       </nav>
     </header>
 
+    <main>
+      <section class="tema_1section_2col">
+        <div class="tema_overskrift">
+          <h1 class="tema_stort_tal">05</h1>
+          <h3>GRUNDLÆGGENDE INDHOLD</h3>
+        </div>
+        <div>
+          <p class="temabeskrivelse">I tema ”05 – Grundlæggende indhold” opnåede jeg en grundlæggende viden samt forståelse for videoproduktion, hvor jeg primært arbejdede i Premiere Pro.</p>
+          <p>Dette tema gav mig stor indsigt i vigtigheden af en nøje tilrettelagt videoproduktion og forarbejdet heraf, hvor jeg blandt andet har dygtiggjort mig inden for udarbejdelsen af storyboards, loglines samt forskellige researchmetoder. Endvidere har jeg fået en generel viden om lyd og fotoproduktion.</p>
+          <p>I dette tema har jeg tilmed lært om hele processen bag et redesign til en hel hjemmeside, som har været yderst givtigt.</p>
+        </div>
+      </section>
+    </main>
+
     <footer>
       <p>© Sarah Hvid Pedersen</p>
     </footer>
