--- a/tema6.html
+++ b/tema6.html
@@ -25,6 +25,20 @@
       </nav>
     </header>
 
+    <main>
+      <section class="tema_1section_2col">
+        <div class="tema_overskrift">
+          <h1 class="tema_stort_tal">06</h1>
+          <h3>PORTFOLIO EKSAMEN</h3>
+        </div>
+        <div>
+          <p class="temabeskrivelse">I tema ”06 – Portfolio-eksamen” har jeg designet og kodet mit eget portfolio, som præsenterer de projekter, herunder processen og de færdige produkter, jeg har arbejdet med gennem semestret.</p>
+          <p>Derudover skulle dette portfolio forhåbentlig tydeliggøre de mange færdigheder, jeg har tilegnet mig på blot seks måneder.</p>
+          <p>Det har været sjovt og ikke mindst utrolig lærerigt, og jeg glæder mig allerede til næste semester, hvor jeg kan dygtiggøre mig endnu mere.</p>
+        </div>
+      </section>
+    </main>
+
     <footer>
       <p>© Sarah Hvid Pedersen</p>
     </footer>
