ommig side næsten færdig

--- a/ommig.html
+++ b/ommig.html
@@ -38,54 +38,44 @@
           <img class="img_place" src="img/portraet.jpg" alt="Billede af mig" />
         </figure>
       </section>
-      <article class="grid_col2_ommig_desk">
+
+      <section class="grid_2col_sec2_ommig">
         <div>
-          <h2 class="uddannelse_desktop">UDDANNELSE</h2>
+          <h2 class="h2_stor_ommig">UDDANNELSE</h2>
         </div>
-        <section class="grid_2col_ommig">
-          <div class="border">
-            <p>Multimediedesigner, KEA</p>
-            <p>Folkeskolelærer, KP</p>
-            <p>STX, HTG</p>
-            <p>Instruktør, TGF</p>
-            <p>Folkeskole, Borgerskolen</p>
-          </div>
-          <div>
-            <p>2022-2024</p>
-            <p>2016-2020</p>
-            <p>2012-2015</p>
-            <p>2007-2012</p>
-            <p>2002-2012</p>
-          </div>
-        </section>
-      </article>
-      <article>
-        <h2 class="erhvervserfaring_left">ERHVERVSERFARING</h2>
-        <section class="grid_2col_ommig">
-          <div class="border">
-            <p>Virksomhedsejer, MyRug.cph</p>
-            <p>Folkeskolelærer, VNS</p>
-            <p>Folkeskolelærer, BK</p>
-            <p>Ekspeditient, Rude Store</p>
-            <p>Værtinde, Royal Arena</p>
-            <p>Ekspeditient, Menu</p>
-          </div>
-          <div>
-            <p>2022-NU</p>
-            <p>2021-2022</p>
-            <p>2020-2021</p>
-            <p>2019-2020</p>
-            <p>2017-2020</p>
-            <p>2010-2013</p>
-          </div>
-        </section>
-      </article>
-      <section>
-        <h2 class="sort_h2">KONTAKT</h2>
-        <p>Sarah Hvid Pedersen</p>
-        <p>07.12.1995</p>
-        <p>+45 21167283</p>
-        <p>Sara199a@stud.kea.dk</p>
+        <div>
+          <p><b>Multimediedesigner, KEA </b> // 2022-2024</p>
+          <p><b>Folkeskolelærer, KP</b> // 2016-2020</p>
+          <p><b>STX, HTG </b> // 2012-2015</p>
+          <p><b>Instruktør, TGF</b> // 2007-2012</p>
+          <p><b>Folkeskole, Borgerskolen </b> // 2002-2012</p>
+        </div>
+      </section>
+
+      <section class="grid_2col_sec2_ommig">
+        <div>
+          <h2 class="h2_stor_ommig">ERHVERVSERFARING</h2>
+        </div>
+        <div>
+          <p><b> Virksomhedsejer, MyRug.cph </b>// 2022-NU</p>
+          <p><b> Folkeskolelærer, VNS </b>// 2021-2022</p>
+          <p><b> Folkeskolelærer, BK </b>// 2020-2021</p>
+          <p><b> Ekspeditient, Rude Store</b> // 2019-2020</p>
+          <p><b> Værtinde, Royal Arena </b>// 2017-2020</p>
+          <p><b> Ekspeditient, Menu </b>// 2010-2013</p>
+        </div>
+      </section>
+
+      <section class="grid_2col_sec2_ommig">
+        <div>
+          <h2 class="sort_h2 h2_stor_ommig">KONTAKT</h2>
+        </div>
+        <div class="margin_top">
+          <p>Sarah Hvid Pedersen</p>
+          <p>07.12.1995</p>
+          <p>+45 21167283</p>
+          <p>Sara199a@stud.kea.dk</p>
+        </div>
       </section>
     </main>
     <footer>
