--- a/tema2.html
+++ b/tema2.html
@@ -41,7 +41,8 @@
       <section class="tema_2section_3col">
         <div>
           <h2>OPGAVEBESKRIVELSE</h2>
-          <p>I dette tema udarbejdede jeg mit første responsive website, som handlede om min store passion, tufting. Derudover skulle websitet tage udgangspunkt i en tildelt stilart, som i mit tilfælde blev retro gaming design, som jeg forinden havde undersøgt og fremlagt om for resten af klassen. En stil der kendetegnes som værende farverig men med en begrænset farvepalette, retro samt pixeleret.</p>
+          <p>I dette tema udarbejdede jeg mit første responsive website, som handlede om min store passion, tufting.</p>
+          <p>Derudover skulle websitet tage udgangspunkt i en tildelt stilart, som i mit tilfælde blev retro gaming design, som jeg forinden havde undersøgt og fremlagt om for resten af klassen. En stil der kendetegnes som værende farverig men med en begrænset farvepalette, retro samt pixeleret.</p>
           <p>Du kan se mit færdige produkt til højre, hvorefter du kan læse mere om min proces nedenfor.</p>
         </div>
         <div class="calltoaction_center">
