--- a/ommig.html
+++ b/ommig.html
@@ -54,7 +54,7 @@
 
       <section class="grid_2col_sec2_ommig">
         <div>
-          <h2 class="h2_stor_ommig">ERHVERVSERFARING</h2>
+          <h2 class="h2_stor_ommig">ERFARING</h2>
         </div>
         <div>
           <p><b> Virksomhedsejer, MyRug.cph </b>// 2022-NU</p>
@@ -62,7 +62,6 @@
           <p><b> Folkeskolelærer, BK </b>// 2020-2021</p>
           <p><b> Ekspeditient, Rude Store</b> // 2019-2020</p>
           <p><b> Værtinde, Royal Arena </b>// 2017-2020</p>
-          <p><b> Ekspeditient, Menu </b>// 2010-2013</p>
         </div>
       </section>
 
