--- a/tema4.html
+++ b/tema4.html
@@ -37,6 +37,60 @@
           <p>Desforuden lærte jeg at arbejde med aktivitets- og statemachinediagrammer, som anvendes med henblik på planlægge komplicerede og interaktive flows.</p>
         </div>
       </section>
+
+      <section class="tema_2section_3col">
+        <div>
+          <h2>OPGAVEBESKRIVELSE</h2>
+          <p>I tema “04 Animation” skulle jeg skabe mit eget spil ved at tegne grafikken i Adobe Illustrator og efterfølgende kode det i HTML, CSS og javascript.</p>
+          <p>I spillet skal du du mikse den helt rigtige cocktail og hjælpe Bartender Bravo med ikke at blive fyret, fordi han har lidt for travlt med at flirte med smukke kvinder og mindre travlt med at mikse lækre cocktails.</p>
+          <p>Du kan se mit færdige produkt til højre, hvorefter du kan læse mere om min proces nedenfor.</p>
+        </div>
+        <div class="calltoaction_center">
+          <a class="calltoaction" href="http://sarahhvid.dk/kea/04_animation/spil/">SE PRODUKT</a>
+        </div>
+        <div class="img_opgavebeskrivelse">
+          <figure>
+            <img src="tema_4/04_opgavebeskrivelse.webp" alt="Billede af det færdige produkt" />
+          </figure>
+        </div>
+      </section>
+
+      <section class="proces_2col">
+        <div>
+          <h2>IDÉ OG KONCEPT</h2>
+          <p>Jævnfør opgavebeskrivelsen skulle jeg lave mit eget klik-spil, hvor jeg startede idegenereringen med en brainstorm.</p>
+          <p>Idéen til spillet, Bartender Bravo, udsprang af lysten til at skabe et spil for den ældre målgruppe, hvori der skulle indgå en form for læring. Dette med henblik på at spillet ikke blev et helt almindeligt klik-spil. Tanken var, at man skal blande en ny drink ved hvert level og derigennem opnå viden om, hvilke ingredienser, der skal i de udvalgte cocktails, som man skal hjælpe Bartender Bravo med at blande. Du vinder spillet ved at opnå mindst 10 point.</p>
+        </div>
+        <div class="proces_byt_plads">
+          <img src="tema_2/02_moodboard.webp" alt="Moodboard" />
+          <img src="tema_2/02_styletile.webp" alt="styletile" />
+        </div>
+      </section>
+
+      <section class="proces_2col">
+        <div>
+          <h2>DESIGN</h2>
+          <p>Til at starte med havde jeg tiltænkt, at spillet skulle være realistisk i dets udtrykform samt tegnestil.</p>
+          <p>Senere i processen, efter at have undersøgt og analyseret forskellige tegnestile, besluttede jeg mig dog for at gøre mine karaktere mere karikerede. Særligt tegnefilmsserien Johnny Bravo blev min primære inspirationskilde, hvorfor mine karakterer ligeledes ændrede udseende fra et mere realistisk udtryk til store musker, store læber og barm mm.</p>
+          <p>Endvidere ønskede jeg at skabe et mere fint og ekslusivt univers/look i selve baren, hvor spillet udfolder sig. Dette med henblik på at skabe en kontrast til mine karakterer. I baren har jeg yderligere haft fokus på at skabe et atmosfærisk perspektiv for at skabe en mere virkelighedstro scene, som fremstår mere realistisk og eksklusiv, end hvis designet havde været fladt og simpelt.</p>
+          <p>Generelt er mit spil utrolig kontrastfyldt i både karakterdesign samt farvevalg, hvilket er med til at skabe tydelige focal points. Endvidere valgte jeg at lade asymmetri være en stor bestanddel af designet på karakterdesignet af Latino bravo. Dette med henblik på at fremhæve hovedpersonen i spillet, da resten af designet, i højere grad, er præget af symmetri.</p>
+        </div>
+        <div>
+          <img src="tema_2/html_css.webp" alt="HTML og CSS" />
+        </div>
+      </section>
+
+      <section class="proces_2col">
+        <div>
+          <h2>IMPLEMENTERING</h2>
+          <p>Jeg finder det relevant at have et kort afsnit om javascript med, da jeg på dette tema blev introduceret til javascript, som bruges til at give indholdet funktioner og derigennem skabe interaktive brugergrænseflader.</p>
+          <p>På dette tema lærte jeg at kombinere javascript med CSS-animationer med dertilhørende keyframes. Med javascript kunne jeg gøre elementerne klikbare, tilføje samt fjerne classes, loade siden og vise forskellige spilskærme og undersøge i konsollen via console.log, om tingene agerede, som jeg gerne ville have det til at gøre. Jeg lærte yderligere at gøre brug af constanter i et bæredygtigt henseende.</p>
+          <p>Jeg udførte afslutningsvis en kvantitativ survey undersøgelse af mit spil.</p>
+        </div>
+        <div class="proces_byt_plads">
+          <img src="tema_2/02_splash.webp" alt="Splashbillede" />
+        </div>
+      </section>
     </main>
 
     <footer>
