--- a/tema2.html
+++ b/tema2.html
@@ -46,11 +46,11 @@
           <p>Du kan se mit færdige produkt til højre, hvorefter du kan læse mere om min proces nedenfor.</p>
         </div>
         <div class="calltoaction_center">
-          <a class="calltoaction" href="tema2.html">SE PRODUKT</a>
+          <a class="calltoaction" href="https://sarahhvid.dk/kea/02_web/04_responsive/responsive_v2/">SE PRODUKT</a>
         </div>
-        <div class="figure_center">
+        <div class="img_opgavebeskrivelse">
           <figure>
-            <img src="img/04_animation.png" alt="Billede af det færdige produkt" />
+            <img src="tema_2/02_opgavebeskrivelse.webp" alt="Billede af det færdige produkt" />
           </figure>
         </div>
       </section>
@@ -62,33 +62,32 @@
           <p>Herefter begyndte jeg idégenereringen af mit design på hjemmesiden ved hjælp af research, som mundede ud i et moodboard samt et styletile. Under denne fase blev jeg, udover min passion tufting, inspireret af retro spillemaskiner, farverne fra Super Mario og pixelerede retro hjemmesider samt typografi.</p>
         </div>
         <div class="proces_byt_plads">
-          <img src="img/04_animation.png" alt="Moodboard" />
-          <img src="img/04_animation.png" alt="styletile" />
+          <img src="tema_2/02_moodboard.webp" alt="Moodboard" />
+          <img src="tema_2/02_styletile.webp" alt="styletile" />
         </div>
       </section>
 
       <section class="proces_2col">
         <div>
-          <h2>KODNING OG OPBYGNING AF WEBSITE</h2>
+          <h2>OPBYGNING AF WEBSITE</h2>
           <p>Efter at have udarbejdet et moodboard og et styletile, fik jeg udleveret en wireframe over hjemmesidens grundlæggende layout, og som jeg, i samspil med ovenstående designprincipper, brugte til at kreere selve indholdet til mit website.</p>
           <p>Derudover fik jeg senere udleveret et layoutdiagram, som jeg fulgte, da jeg kodede i HTML-filen. Dette med henblik på at sikre struktur og semantisk opmærkning.</p>
           <p>Dernæst blev jeg introduceret for CSS, som gør det muligt at style sine HTML-elementer. Det var ligeledes her jeg blev gjort bekendt med responsivitet samt mobile-first princippet, hvor man ved hjælp af grids og flexbox, i media queries, kan tilpasse indholdets placering på skærme, der har et højere antal pixels end på en mobiltelefon.</p>
         </div>
         <div>
-          <img src="img/04_animation.png" alt="HTML" />
-          <img src="img/04_animation.png" alt="CSS" />
+          <img src="tema_2/html_css.webp" alt="HTML og CSS" />
         </div>
       </section>
 
       <section class="proces_2col">
         <div>
-          <h2>RESEARCH OG DESIGN</h2>
+          <h2>SPLASHBILLEDE</h2>
           <p>Til vores hjemmeside skulle vi ligeledes designe vores eget splashbillede, hvor jeg i den forbindelse fik arbejdet med Adobe Photoshop.</p>
           <p>Jeg valgte at tage et billede af min tuftinggun og fjerne baggrunden på den. Derudover fandt jeg en hånd på Unsplash.com hvor jeg ligeledes fjernede baggrunden, og satte de to billeder sammen på en ny baggrund.</p>
           <p>Til sidst i temaet uploadede jeg min kode i VSCODE til mit webhost ved hjælp af ftp-clienten Filezilla.</p>
         </div>
         <div class="proces_byt_plads">
-          <img src="img/04_animation.png" alt="Splashbillede" />
+          <img src="tema_2/02_splash.webp" alt="Splashbillede" />
         </div>
       </section>
 
@@ -102,7 +101,7 @@
 
       <section>
         <h1>
-          <a href="tema3.html">GÅ VIDERE OS LÆS OM TEMA 03</a>
+          <a href="tema3.html">GÅ TIL TEMA 03</a>
         </h1>
       </section>
     </main>
