--- a/tema6.html
+++ b/tema6.html
@@ -37,6 +37,41 @@
           <p>Det har været sjovt og ikke mindst utrolig lærerigt, og jeg glæder mig allerede til næste semester, hvor jeg kan dygtiggøre mig endnu mere.</p>
         </div>
       </section>
+
+      <section class="proces_2col">
+        <div>
+          <h2>IDÉ OG RESEARCH</h2>
+          <p>Idéen til “STØT EN STARTUP” udsprang af egne erfaringer som nyopstartet virksomhed. Jeg ønskede at skabe et koncept, hvor nyopstartede kreative sjæle ville få mulighed for indgå et samarbejde med “STØT EN STARTUP” og derigennem opnå større eksponering.</p>
+          <p>I min desk research, hvor jeg indsamlede viden og indsigter fra allerede eksisterende hjemmesider, fandt jeg ud af, at dette koncept ikke fandtes inden for tekstiler herunder t-shirts. Konceptet fandtes dog inden for salg af interiør og andre håndlavede kreationer fra forskellige kunstnere. Jeg undersøgte derfor også andre hjemmesider, som solgte t-shirts. Dette med henblik på at undersøge virksomhedernes design, priser, USP, call to action samt UI elementer. Tillige viste min desk research, at der er et øget fokus på bæredygtighed.</p>
+          <p>Med afsæt i ovenstående indsigter benyttede jeg mig yderligere af en kvalitativ metode, herunder interview, samt en kvantitativ metode, herunder surveyundersøgelse. Dette med henblik på at indsamle empiri samt data og derigennem afsøge forbrugerens indkøbsvaner af t-shirts nærmere.</p>
+        </div>
+        <div class="proces_byt_plads">
+          <img src="tema_2/02_moodboard.webp" alt="Moodboard" />
+          <img src="tema_2/02_styletile.webp" alt="styletile" />
+        </div>
+      </section>
+
+      <section class="proces_2col">
+        <div>
+          <h2>DESIGN</h2>
+          <p>Med indsigterne fra min desk research samt indsamling af empiri og data, startede jeg designprocessen med en sketch fase, hvor jeg udarbejdede en lightning demos, som senere blev brugt som idégenerering og inspiration i klassen. Jeg fik yderligere inspiration til designet fra Kaj Koncept, Bareen Tshirt, Han Kjøbenhavn og NAKD.</p>
+          <p>I designprocessen udarbejdede jeg yderligere et moodboard, som dannede udgangspunkt for det visuelle udtryk. Endvidere arbejdede jeg med Crazy 8’s, som er fordelagtig at anvende til hurtig idégenering.</p>
+          <p>Med afsæt i ovenstående udarbejdede jeg en solution sketch, som gav mig et visuelt overblik, inden jeg skulle i gang med at lave min High fidelity prototype i Adobe XD. Jeg finder det yderligere nævneværdigt, at vi i dette tema blev introduceret for UI, konventioner, gestaltlove, informationsarkitektur og copy samt micro copy, som jeg ligeledes forsøgte at implementere i min High fidelity prototype.</p>
+        </div>
+        <div>
+          <img src="tema_2/html_css.webp" alt="HTML og CSS" />
+        </div>
+      </section>
+
+      <section class="proces_2col">
+        <div>
+          <h2>TEST OG PITCH</h2>
+          <p>Afslutningsvis testede jeg min prototype med tænke-højt-testen. Dette gav mig nogle indsigter i forhold til prototypens brugergrænseflade samt brugerrejsen, som jeg kunne arbejde videre på, inden aflevering og pitch for resten af klassen.</p>
+        </div>
+        <div class="proces_byt_plads">
+          <img src="tema_2/02_splash.webp" alt="Splashbillede" />
+        </div>
+      </section>
     </main>
 
     <footer>
