ikke mere for i denne søndag

--- a/tema4.html
+++ b/tema4.html
@@ -59,11 +59,11 @@
         <div>
           <h2>IDÉ OG KONCEPT</h2>
           <p>Jævnfør opgavebeskrivelsen skulle jeg lave mit eget klik-spil, hvor jeg startede idegenereringen med en brainstorm.</p>
-          <p>Idéen til spillet, Bartender Bravo, udsprang af lysten til at skabe et spil for den ældre målgruppe, hvori der skulle indgå en form for læring. Dette med henblik på at spillet ikke blev et helt almindeligt klik-spil. Tanken var, at man skal blande en ny drink ved hvert level og derigennem opnå viden om, hvilke ingredienser, der skal i de udvalgte cocktails, som man skal hjælpe Bartender Bravo med at blande. Du vinder spillet ved at opnå mindst 10 point.</p>
+          <p>Idéen til spillet, Bartender Bravo, udsprang af lysten til at skabe et spil for den ældre målgruppe, hvori der skulle indgå en form for læring. Dette med henblik på at spillet ikke blev et helt almindeligt klik-spil. Tanken var, at man skal blande en ny drink ved hvert level og derigennem opnå viden om, hvilke ingredienser, der skal i de udvalgte cocktails, som man skal hjælpe Bartender Bravo med at blande.</p>
+          <p>Du vinder spillet ved at opnå mindst 10 point. Rigtige ingredienser giver + 1 point, forkerte ingradienser giver - 1 point, og hvis du trykker på den væltede shaker mister du et liv.</p>
         </div>
         <div class="proces_byt_plads">
-          <img src="tema_2/02_moodboard.webp" alt="Moodboard" />
-          <img src="tema_2/02_styletile.webp" alt="styletile" />
+          <img src="tema_4/04_aktivitetsdiagram.webp" alt="Aktivitetsdiagram" />
         </div>
       </section>
 
@@ -76,7 +76,8 @@
           <p>Generelt er mit spil utrolig kontrastfyldt i både karakterdesign samt farvevalg, hvilket er med til at skabe tydelige focal points. Endvidere valgte jeg at lade asymmetri være en stor bestanddel af designet på karakterdesignet af Latino bravo. Dette med henblik på at fremhæve hovedpersonen i spillet, da resten af designet, i højere grad, er præget af symmetri.</p>
         </div>
         <div>
-          <img src="tema_2/html_css.webp" alt="HTML og CSS" />
+          <img src="tema_4/04_design2.webp" alt="Baggrundsdesign" />
+          <img src="tema_4/04_design1.webp" alt="Skitser og designudvikling" />
         </div>
       </section>
 
@@ -88,7 +89,7 @@
           <p>Jeg udførte afslutningsvis en kvantitativ survey undersøgelse af mit spil.</p>
         </div>
         <div class="proces_byt_plads">
-          <img src="tema_2/02_splash.webp" alt="Splashbillede" />
+          <img src="tema_4/04_java.webp" alt="Splashbillede" />
         </div>
       </section>
     </main>
