--- a/projekter.html
+++ b/projekter.html
@@ -31,7 +31,7 @@
         </div>
         <div class="grid">
           <div class="img_wrapper">
-            <img src="img/04_animation.png" alt="billede" />
+            <img src="projekter/02_projekter.webp" alt="billede" />
             <div class="content fade">
               <a href="tema2.html">
                 <h2 class="hover_h2">02</h2>
@@ -41,7 +41,7 @@
           </div>
 
           <div class="img_wrapper">
-            <img src="img/04_animation.png" alt="billede" />
+            <img src="projekter/03_projekter.webp" alt="billede" />
             <div class="content fade">
               <a href="tema3.html">
                 <h2 class="hover_h2">// 03</h2>
@@ -51,7 +51,7 @@
           </div>
 
           <div class="img_wrapper">
-            <img src="img/04_animation.png" alt="billede" />
+            <img src="projekter/04_projekter.webp" alt="billede" />
 
             <div class="content fade">
               <a href="tema4.html">
@@ -62,7 +62,7 @@
           </div>
 
           <div class="img_wrapper">
-            <img src="img/04_animation.png" alt="billede" />
+            <img src="projekter/05_projekter.webp" alt="billede" />
             <div class="content fade">
               <a href="tema5.html">
                 <h2 class="hover_h2">// 05</h2>
@@ -72,7 +72,7 @@
           </div>
 
           <div class="img_wrapper">
-            <img src="img/04_animation.png" alt="billede" />
+            <img src="projekter/06_projekter.webp" alt="billede" />
             <div class="content fade">
               <a href="tema6.html">
                 <h2 class="hover_h2">// 06</h2>
